# Projekt2

./: CMakeLists.txt  README.md
Projekt/: CMakeLists.txt  Projekt.cpp  Projekt.h
